--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -4,7 +4,7 @@ html, body, #root {
   height: 100%;
   width: 100%;
   overflow: hidden;
-  font-family: 'MedievalSharp', cursive;
+  font-family: 'Macondo', "MedievalSharp", cursive;
   background-color: transparent;
   color: #3c2f2f;
 }
