--- a/src/styles/FantasyPortfolioMap.css
+++ b/src/styles/FantasyPortfolioMap.css
@@ -13,6 +13,10 @@
     height: 100%;
   }
   
+  .leaflet-interactive{
+    outline: none;
+  }
+  
   .leaflet-container {
     width: 100%;
     height: 100%;
